--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   smooth_page_indicator: ^1.0.1
   otp_text_field: ^1.1.3
+  flutter_locales: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -29,6 +30,9 @@ flutter:
 
   assets:
     - assets/images/onboarding/
+    - assets/locales/en.json
+    - assets/locales/ru.json
+    - assets/locales/uz.json
 
   fonts:
     - family: Roboto
