--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   smooth_page_indicator: ^1.0.1
   otp_text_field: ^1.1.3
   flutter_locales: ^2.0.2
+  google_maps_flutter: ^2.2.4
+  sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
