--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,5 +31,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+            <meta-data
+              android:name="com.google.android.geo.API_KEY"
+              android:value="AIzaSyDCrPjZnS1YcFWApkQ5H3nmjZwFRP5RArI"
+              />
     </application>
 </manifest>
