--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   sliding_up_panel: ^2.0.0+1
   flutter_screenutil: ^5.6.1
   easy_splash_screen: ^1.0.4
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
