--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   cupertino_icons: ^1.0.2
   smooth_page_indicator: ^1.0.1
   otp_text_field: ^1.1.3
@@ -22,6 +21,9 @@ dependencies:
   easy_splash_screen: ^1.0.4
   geolocator: ^9.0.2
   http: ^0.13.5
+  flutter_bloc: ^8.1.2
+  dio: ^5.0.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
