--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   dio: ^5.0.1
   equatable: ^2.0.5
+  shared_preferences: ^2.0.18
 
 dev_dependencies:
   flutter_test:
